--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,6 +5,8 @@
 
   <div class="form-inputs">
     <%= f.input :photo, as: :file %>
+    <%= f.input :username %>
+    <%= f.input :full_name %>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
