--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,8 @@
 <%= render 'shared/navbar', { left: (link_to "Upload", new_post_path), center: "Instagram", right: "Messages" } %>
 <div class="container">
-  <% @posts.each do |post| %>
-    <%= render "shared/post-card", post: post %>
+  <% if !@posts.empty? %>
+    <% @posts.each do |post| %>
+      <%= render "shared/post-card", post: post %>
+    <% end%>
   <% end%>
 </div>
