--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,9 +4,9 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :photo, as: :file %>
-    <%= f.input :username %>
-    <%= f.input :full_name %>
+    <%= f.input :photo, as: :file, required: true %>
+    <%= f.input :username, required: true %>
+    <%= f.input :full_name, required: true %>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
