fixing log probs

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -13,11 +13,11 @@
       <%= link_to "Activity", '#' %>
     </li>
     <li class="navbar-item">
-      <% if (user_signed_in? && current_user.photo.attached?) %>
-        <%= link_to user_path(current_user) do %>
-          <%= cl_image_tag(current_user.photo.key, class:"small-round-avatar") %>
-        <% end %>
-      <% end %>
+      <%# <% if (user_signed_in? && current_user.photo.attached?) %> %>
+        <%# <%= link_to user_path(current_user) do %> %>
+          <%# <%= cl_image_tag(current_user.photo.key, class:"small-round-avatar") %> %>
+        <%# <% end %> %>
+      <%# <% end %> %>
     </li>
   </ul>
 </div>
