--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,9 @@
 <%= render  "shared/navbar", left: '', center: @user.username, right: 'Settings' %>
 <div class="container">
+  <%= link_to "Log out", destroy_user_session_path, method: :delete %>
   <%= cl_image_tag(@user.photo.key, class:"medium-round-avatar") %>
   <h1><%= @user.username %></h1>
   <h1><%= @user.full_name %></h1>
   <h1><%= @user.email %></h1>
 </div>
+<%= render  "shared/footer" %>
