--- a/app/views/shared/_post-card.html.erb
+++ b/app/views/shared/_post-card.html.erb
@@ -1,4 +1,6 @@
 <div class="post-card-container">
+
+<%= link_to "Delete Post", post_path(post), method: :delete, data: { confirm: "Are you sure?" }%>
   
   <%# Card %>
   <%= post.user.username %>
