--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,6 +1,6 @@
 .footer-container {
   height: 60px;
-  background-color: $light-gray;
+  background-color: white;
   position: fixed;
   bottom: 0;
   width: 100%;
