--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,6 +1,7 @@
 .small-round-avatar {
-  width: 40px;
-  height: 40px;
+  width: 32px;
+  height: 32px;
+  margin: 10px;
   border-radius: 50%;
   object-fit: cover;
 }
@@ -8,6 +9,13 @@
 .medium-round-avatar {
   width: 80px;
   height: 80px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.navbar-avatar {
+  height: 20px;
+  width: 20px;
   border-radius: 50%;
   object-fit: cover;
 }
