--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-container {
   height: 60px;
-  background-color: $light-gray;
+  background-color: white;
   position: fixed;
   top: 0;
   width: 100%;
