--- a/app/assets/stylesheets/components/_post-card.scss
+++ b/app/assets/stylesheets/components/_post-card.scss
@@ -1,5 +1,25 @@
+.post-card-container {
+  border-radius: 4px;
+  background-color: white;
+  width: 100vw;
+}
+
+.post-card-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.photo-and-username {
+  display: flex;
+}
+
 .post-image {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.comment {
+  display: flex;
+  justify-content: space-between;
 }
