--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
-<%= render  "shared/navbar", left: (link_to "Back", :back), center: "Add post" %>
+<%= render  "shared/navbar", center: "Add post" %>
 <div class="container">
   <%= simple_form_for(@post) do |f| %>
     <%= f.input :photo, as: :file %>
