--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<%= render  "shared/navbar", left: '', center: @user.username, right: 'Settings' %>
+<%= render  "shared/navbar", left: '', center: @user.username, right: (link_to "Settings", edit_user_registration_path) %>
 <div class="container">
 
   <%= link_to "Log out", destroy_user_session_path, method: :delete %>
