--- a/app/assets/stylesheets/components/_post-card.scss
+++ b/app/assets/stylesheets/components/_post-card.scss
@@ -23,3 +23,11 @@
   display: flex;
   justify-content: space-between;
 }
+
+.post-buttons-bar {
+  padding: 0 10px;
+}
+
+.post-comments-container {
+  padding: 10px;
+}
