--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
 @import "./components/avatar";
 @import "./components/footer";
 @import "./components/post-card";
+@import "./components/user";
 
 body {
   background-color: white;
@@ -21,6 +22,7 @@ body {
 
 ul {
   list-style: none;
+  padding: 0px;
 }
 
 .container {
@@ -38,9 +40,31 @@ img {
   image-orientation: from-image!important;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  text-decoration: none;
+  color: black;
+}
+
 h5 {
   font-size: 14px;
   margin-top: 16px;
   color: black;
   font-weight: 600;
+}
+
+// Icons
+
+.fas {
+  font-size: 22px;
+  margin: 15px;
+}
+
+.far {
+  font-size: 18px;
+  margin: 10px;
 }
