--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,17 +1,26 @@
-<%= render  "shared/navbar", left: '', center: @user.username, right: (link_to "Settings", edit_user_registration_path) %>
-<div class="container">
+<%= render  "shared/navbar", left: '', center: @user.username, right: (link_to "", edit_user_registration_path, class:"fas fa-cog") %>
 
-  <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+<div class="container">
   
   <%# User avatar %>
-  <% if @user.photo.attached? %>
-    <%= cl_image_tag(@user.photo.key, class:"medium-round-avatar") %>
-  <% else %>
-    <h1>default photo</h1>
-  <% end %>
 
-  <h1><%= @user.username %></h1>
-  <h1><%= @user.full_name %></h1>
-  <h1><%= @user.email %></h1>
+  <%# User header %>
+  <div class="user-header">
+    <% if @user.photo.attached? %>
+      <%= cl_image_tag(@user.photo.key, class:"medium-round-avatar") %>
+    <% end %>
+    <%# Stats meter %>
+    <%= render "shared/stats-meter", user: @user %>
+  </div>
+
+
+  <div class="posts-grid">
+    <% @user.posts.each do |post| %>
+      <div class="grid-photo-container">
+        <%= cl_image_tag(post.photo.key, class:"grid-photo")%>
+      </div>
+    <% end %>
+  </div>
+  
 </div>
-<%= render  "shared/footer" %>
+<%= render "shared/footer" %>
