--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,6 +3,7 @@
   position: fixed;
   top: 0;
   width: 100%;
+  padding-top: 10px;
 }
 
 .navbar-flex-icons {
@@ -13,4 +14,12 @@
 
 .navbar-item {
   padding: 6px 12px;
+}
+
+.navbar-avatar {
+  height: 22px;
+  width: 22px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-top: 10px;
 }
