--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,7 +8,7 @@
         <%= left%>
       </li>
       <li class="navbar-item">
-        <%= center%>
+        <h4><%= center%></h4>
       </li>
       <li class="navbar-item">
         <%= right%>
