fixed like meter

--- a/app/views/shared/_post-card.html.erb
+++ b/app/views/shared/_post-card.html.erb
@@ -34,7 +34,7 @@
   
   <%# Post likes meter %>
   <div class="post-likes-meter">
-    <p><%= post.likes.count %> likes</p>
+    <h5><%= post.likes.count %> likes</h5>
   </div>
   
   <%# Post description and comments section %>
