--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,8 @@
 @import "./components/footer";
 @import "./components/post-card";
 @import "./components/user";
+@import "./components/buttons";
+@import "./components/form";
 
 body {
   background-color: white;
