--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,13 +3,13 @@
   position: fixed;
   top: 0;
   width: 100%;
-  padding-top: 10px;
 }
 
 .navbar-flex-icons {
   display: flex;
   justify-content: space-between;
   padding: 0 20px;
+  margin: 0px;
 }
 
 .navbar-item {
