--- a/app/assets/stylesheets/components/_user.scss
+++ b/app/assets/stylesheets/components/_user.scss
@@ -15,15 +15,30 @@
 
 .posts-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 1px;
+  grid-template-columns: repeat(auto-fill, minmax(8rem, 1fr));
+  grid-auto-rows: 1fr;
+  gap: 2px;
 }
 
-.grid-photo-container {
-  height: 100%;
+.posts-grid::before {
+  content: '';
+  width: 0;
+  padding-bottom: 100%;
+  grid-row: 1 / 1;
+  grid-column: 1 / 1;
+}
+
+.posts-grid > *:first-child {
+  grid-row: 1 / 1;
+  grid-column: 1 / 1;
 }
 
 .grid-photo {
   object-fit: cover;
   width: 100%;
+  height: 100%
+}
+
+.bio-and-edit {
+  margin: 10px;
 }
