--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,6 @@
-<%= simple_form_for [@post, @comment] do |f| %>
-  <%= f.input :content %>
-  <%= f.submit "Add"%>
-<% end %>
+<div class="form-container">
+  <%= simple_form_for [@post, @comment] do |f| %>
+    <%= f.input :content %>
+    <%= f.submit "Add", class:"primary-button"%>
+  <% end %>
+</div>
