--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,11 +1,13 @@
 <%= render  "shared/navbar", center: "Add post" %>
 <div class="container">
-  <%= simple_form_for(@post) do |f| %>
-    <%= f.input :photo, as: :file %>
-    <%= f.input :description %>
-    <div class="form-actions">
-      <%= f.button :submit, "Post" %>
-    </div>
-  <% end %>
+  <div class="form-container">
+    <%= simple_form_for(@post) do |f| %>
+      <%= f.input :photo, as: :file %>
+      <%= f.input :description %>
+      <div class="form-actions">
+        <%= f.button :submit, "Post", class:"primary-button" %>
+      </div>
+    <% end %>
+  </div>
 </div>
 <%= render "shared/footer" %>
