--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,6 +1,4 @@
-// Define variables for your color scheme
-
-// For example:
+// Annoying bootstrap vars
 $red: #FD1015;
 $blue: #167FFB;
 $yellow: #FFC65A;
@@ -8,3 +6,12 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #00000033;
 $light-gray: #F4F4F4;
+
+// My awesome vars
+$main-color: #0095f6;
+$dark-gray: #00000050;
+$gray: #00000035;
+$light-gray: #00000025;
+$background: white;
+$font-headers: black;
+$font-body: #00000045;
