--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -68,6 +68,10 @@ h5 {
   font-weight: 600;
 }
 
+p {
+  font-size: 14px;
+}
+
 // Icons
 
 .fas {
@@ -78,4 +82,9 @@ h5 {
 .far {
   font-size: 22px;
   margin: 10px;
+}
+
+.fa-ellipsis-v {
+  font-size: 16px;
+  margin: 18px;
 }
