--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,11 +1,12 @@
 .primary-button {
-  background-color: white;
-  color: #000;
+  background-color: $main-color;
+  color: white;
   width: 100%;
   text-align: center;
-  border: 1px solid #00000033;
   border-radius: 4px;
   padding: 6px 20px;
+  font-weight: 600;
+  font-size: 14px;
 }
 
 .secondary-button {
@@ -22,6 +23,13 @@
   padding: 8px;
 }
 
-.text-link {
-  
+.link {
+  background-color: white;
+  color: $main-color;
+  width: 100%;
+  text-align: center;
+  border-radius: 4px;
+  padding: 6px 20px;
+  font-weight: 600;
+  font-size: 14px; 
 }
