--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -16,10 +16,15 @@
   padding: 6px 12px;
 }
 
+.navbar-item-side {
+  padding: 12px;
+  min-width: 80px;
+}
+
 .navbar-avatar {
   height: 22px;
   width: 22px;
   border-radius: 50%;
   object-fit: cover;
-  margin-top: 10px;
+  margin: 10px;
 }
