--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,6 +8,7 @@
       <%= f.input :photo, as: :file, required: true %>
       <%= f.input :username, required: true %>
       <%= f.input :full_name, required: true %>
+      <%= f.input :bio, required: false %>
       <%= f.input :email,
                   required: true,
                   autofocus: true,
