--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<%= render  "shared/navbar", center: "Photo" %>
+<%= render  "shared/navbar", left: (link_to "Back", :back), center: "Photo" %>
 <div class="container">
   <%= render  "shared/post-card", post: @post %>
 </div>
