--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,8 +33,8 @@ ul {
   margin-top: 60px!important;
   padding-bottom: 20px!important;
   margin-bottom: 60px!important;
-  margin-right: 0px;
-  margin-left: 0px;
+  margin-right: auto;
+  margin-left: auto;
   padding-right: 0px;
   padding-left: 0px;
 }
