--- a/app/assets/stylesheets/components/_post-card.scss
+++ b/app/assets/stylesheets/components/_post-card.scss
@@ -1,7 +1,7 @@
 .post-card-container {
   border-radius: 4px;
   background-color: white;
-  width: 100vw;
+  width: 100%;
 }
 
 .post-card-header {
