added followings and fixed user show page params

--- a/app/views/shared/_stats-meter.html.erb
+++ b/app/views/shared/_stats-meter.html.erb
@@ -4,11 +4,11 @@
     <p>posts</p>
   </li>
   <li class="stats">
-    <h5>0</h5>
+    <h5><%= user.followers.count %></h5>
     <p>followers</p>
   </li>
   <li class="stats">
-    <h5>0</h5>
+    <h5><%= user.followings.count %></h5>
     <p>following</p>
   </li>
 </ul>
