--- a/app/views/shared/_stats-meter.html.erb
+++ b/app/views/shared/_stats-meter.html.erb
@@ -4,7 +4,7 @@
     <p>posts</p>
   </li>
   <li class="stats">
-    <h5><%= user.followers.count %></h5>
+    <h5><%= user.followers.size %></h5>
     <p>followers</p>
   </li>
   <li class="stats">
