--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -4,7 +4,7 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  box-shadow: 1px 1px 10px #00000030;
+  border-top: solid 1px #00000015;
 }
 
 .footer-buttons {
