--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -7,6 +7,12 @@
   padding: 6px 20px;
   font-weight: 600;
   font-size: 14px;
+  margin-top: 10px;
+}
+
+.primary-button:hover {
+  color: white;
+  box-shadow: 1px 1px 10px #00000030;
 }
 
 .secondary-button {
@@ -16,6 +22,7 @@
   border: 1px solid #00000033;
   border-radius: 4px;
   padding: 6px 20px;
+  margin-top: 10px;
 }
 
 .log-out {
