--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,9 +20,8 @@
     <%= link_to edit_user_registration_path do %>
       <div class="secondary-button">Edit</div>
     <% end %>
-    <br>
     
-    <% if @user.followers.empty? %>
+    <% if (@user.followers.empty? && @user.email != current_user.email) %>
       <%= link_to new_user_follow_path(@user) do %>
           <div class="primary-button">Follow</div>
       <% end %>
